Update MM to the latest version.  retrieved from http://www.engelschall.com/sw/mm
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60018 13f79535-47bb-0310-9956-ffa450edef68

--- a/shmem/unix/mm/INSTALL
+++ b/shmem/unix/mm/INSTALL
@@ -3,8 +3,11 @@
   | |\/| | |\/| |
   | |  | | |  | |
   |_|  |_|_|  |_|
-                 
+
   MM - Shared Memory Library
+
+  INSTALL
+  =======
 
   To install the MM library into /path/to/mm/{bin,lib,include,man}/ perform
   the following steps in your shell:
