--- a/shmem/unix/mm/mm-config.1
+++ b/shmem/unix/mm/mm-config.1
@@ -1,11 +1,12 @@
 .rn '' }`
-''' $RCSfile: mm-config.1,v $$Revision: 1.2 $$Date: 1999/09/27 07:42:06 $
+''' $RCSfile: mm-config.1,v $$Revision: 1.3 $$Date: 2000/05/03 17:15:48 $
 '''
 ''' $Log: mm-config.1,v $
-''' Revision 1.2  1999/09/27 07:42:06  rse
-''' Update the MM version APR contains to a more recent one.
+''' Revision 1.3  2000/05/03 17:15:48  rbb
+''' Update MM to the latest version.  retrieved from
+''' http://www.engelschall.com/sw/mm
 '''
-''' Revision 1.7  1999/09/06 11:32:17  rse
+''' Revision 1.11  2000/04/30 18:35:59  rse
 ''' *** empty log message ***
 '''
 '''
@@ -99,7 +100,7 @@
 .nr % 0
 .rr F
 .\}
-.TH MM-CONFIG 1 "06-Sep-1999" "MM 1.0.11" "Shared Memory Library"
+.TH MM-CONFIG 1 "30-Apr-2000" "MM 1.1.1" "Shared Memory Library"
 .UC
 .if n .hy 0
 .if n .na
@@ -196,7 +197,7 @@
 .SH "NAME"
 \fBmm-config\fR \- MM library configuration/build utility
 .SH "VERSION"
-MM 1.0.11 (06-Sep-1999)
+MM 1.1.1 (30-Apr-2000)
 .SH "SYNOPSIS"
 \fBmm-config\fR 
 [\fB--help\fR]
