--- a/shmem/unix/mm/mm-config.pod
+++ b/shmem/unix/mm/mm-config.pod
@@ -1,5 +1,5 @@
 ## ====================================================================
-## Copyright (c) 1999 Ralf S. Engelschall. All rights reserved.
+## Copyright (c) 1999-2000 Ralf S. Engelschall. All rights reserved.
 ##
 ## Redistribution and use in source and binary forms, with or without
 ## modification, are permitted provided that the following conditions
