Some of the forewarned APR network_io interface changes:
apr_set_port(), apr_get_port(), apr_set_ipaddr(), and apr_get_ipaddr()
now take apr_sockaddr_t as a parameter instead of apr_socket_t +
apr_interface_e.  This will allow the same routines to be used with
datagram APIs to be added later.  Note that code which calls
apr_set_ipaddr() should probably be changed to call apr_getaddrinfo()
for protocol independence.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60780 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,11 @@
 Changes with APR a8
+  *) apr_set_port(), apr_get_port(), apr_set_ipaddr(), and apr_get_ipaddr()
+     now take apr_sockaddr_t as a parameter instead of apr_socket_t +
+     apr_interface_e.  This will allow the same routines to be used with
+     datagram APIs to be added later.  Note that code which calls 
+     apr_set_ipaddr() should probably be changed to call apr_getaddrinfo()
+     for protocol independence.  [Jeff Trawick]
+
   *) apr_create_tcp_socket() has been removed.  Use apr_create_socket()
      instead.  [Jeff Trawick]
 
