Rename sa_len to salen in apr_sockaddr_t.  Some platforms have a macro named sa_len,  and this was confusing them PR:     6874 Submitted by:   Tony Finch
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60784 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 Changes with APR a8
+  *) Change the name of the sa_len field in apr_sockaddr_t to salen.
+     Some platforms have a macro named sa_len.
+     [Tony Finch]
+
   *) apr_set_port(), apr_get_port(), apr_set_ipaddr(), and apr_get_ipaddr()
      now take apr_sockaddr_t as a parameter instead of apr_socket_t +
      apr_interface_e.  This will allow the same routines to be used with
